// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssayDesignerPanels default properties 1`] = `
Array [
  <div
    className="domain-form-panel panel-active panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Assay Properties
      </span>
    </div>
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Basic Properties
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Name *
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              disabled={false}
              id="assay-design-name"
              onChange={[Function]}
              placeholder="Enter a name for this assay"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control domain-field-textarea"
              id="assay-design-description"
              onChange={[Function]}
              placeholder="Add a description"
              value=""
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Edit Settings
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Runs
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={false}
              id="assay-design-editableRuns"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Results
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={false}
              id="assay-design-editableResults"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Batch Properties
      </span>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Run Properties
      </span>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Results Properties
      </span>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <button
          className="btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Next
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`AssayDesignerPanels hideEmptyBatchDomain for new assay 1`] = `
Array [
  <div
    className="domain-form-panel panel-active panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Assay Properties
      </span>
    </div>
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Basic Properties
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Name *
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              disabled={false}
              id="assay-design-name"
              onChange={[Function]}
              placeholder="Enter a name for this assay"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control domain-field-textarea"
              id="assay-design-description"
              onChange={[Function]}
              placeholder="Add a description"
              value=""
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Edit Settings
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Runs
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={false}
              id="assay-design-editableRuns"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Results
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={false}
              id="assay-design-editableResults"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Run Properties
      </span>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Results Properties
      </span>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-default"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Back
        </button>
        <button
          className="btn btn-success"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Next
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`AssayDesignerPanels hideEmptyBatchDomain with initModel 1`] = `
Array [
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Assay Properties
      </span>
      <span
        className="pull-right"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-minus-square fa-w-14 domain-form-expand-btn"
          data-icon="minus-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Basic Properties
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Name *
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              disabled={true}
              id="assay-design-name"
              onChange={[Function]}
              placeholder="Enter a name for this assay"
              type="text"
              value="Test Assay Protocol"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control domain-field-textarea"
              id="assay-design-description"
              onChange={[Function]}
              placeholder="Add a description"
              value="My assay protocol for you all to use."
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Edit Settings
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Runs
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={true}
              id="assay-design-editableRuns"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Results
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={true}
              id="assay-design-editableResults"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Sample Properties (3)
      </span>
      <span
        className="pull-right"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-plus-square fa-w-14 domain-form-expand-btn"
          data-icon="plus-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-success"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Finish
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`AssayDesignerPanels initModel 1`] = `
Array [
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Assay Properties
      </span>
      <span
        className="pull-right"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-minus-square fa-w-14 domain-form-expand-btn"
          data-icon="minus-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
    <div
      className="panel-body"
    >
      <form
        className=""
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Basic Properties
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Name *
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              className="form-control"
              disabled={true}
              id="assay-design-name"
              onChange={[Function]}
              placeholder="Enter a name for this assay"
              type="text"
              value="Test Assay Protocol"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <textarea
              className="form-control domain-field-textarea"
              id="assay-design-description"
              onChange={[Function]}
              placeholder="Add a description"
              value="My assay protocol for you all to use."
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-12"
          >
            <div
              className="domain-field-section-heading"
            >
              Edit Settings
            </div>
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Runs
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={true}
              id="assay-design-editableRuns"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
        <div
          className="margin-top row"
        >
          <div
            className="col-xs-3"
          >
            Editable Results
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="col-xs-9"
          >
            <input
              checked={true}
              id="assay-design-editableResults"
              onChange={[Function]}
              type="checkbox"
            />
          </div>
        </div>
      </form>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Batch Properties
      </span>
      <span
        className="pull-right"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-plus-square fa-w-14 domain-form-expand-btn"
          data-icon="plus-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="domain-form-panel panel panel-default"
  >
    <div
      className="panel-heading"
    >
      <span>
        Sample Properties (3)
      </span>
      <span
        className="pull-right"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-plus-square fa-w-14 domain-form-expand-btn"
          data-icon="plus-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-32 252c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92H92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="form-group no-margin-bottom"
  >
    <div
      className=""
    >
      <div
        className="pull-left"
      >
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        className="btn-group pull-right"
      >
        <button
          className="btn btn-success"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Finish
        </button>
      </div>
    </div>
  </div>,
]
`;
